--- a/locales/fr/main.po
+++ b/locales/fr/main.po
@@ -1,8 +1,16 @@
-msgid "Hosting Monitor Dashboard Module"
-msgstr "Module d'affichage des capacités serveur"
-
-msgid "Display server information on dashboard"
-msgstr "Affiche les capacités serveur sur le tableau de bord"
+msgid ""
+msgstr ""
+"Project-Id-Version: Dotclear 2 dmHostingMonitor module\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2012-11-05 17:04+0100\n"
+"PO-Revision-Date: \n"
+"Last-Translator: Franck Paul <carnet.franck.paul@gmail.com>\n"
+"Language-Team: \n"
+"Language: fr\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 1.5.4\n"
 
 msgid "TB"
 msgstr "To"
@@ -21,9 +29,6 @@ msgstr "o"
 
 msgid "Hosting Monitor"
 msgstr "Capacités serveur"
-
-msgid "of"
-msgstr "de"
 
 msgid "Hard-disk free:"
 msgstr "Place libre sur le disque :"
@@ -56,16 +61,27 @@ msgid "Show hard-disk information"
 msgstr "Afficher les informations concernant le disque"
 
 msgid "Allocated hard-disk size (in Mb, leave empty for unlimited):"
-msgstr "Taille allouée sur le disque dur (en Mo, laisser vide pour illimitée) :"
+msgstr ""
+"Taille allouée sur le disque dur (en Mo, laisser vide pour illimitée) :"
 
 msgid "Show database information"
 msgstr "Afficher les informations concernant la base de données"
 
 msgid "Allocated database size (in Mb, leave empty for unlimited):"
-msgstr "Taille allouée pour la base de données (en Mo, laisser vide pour illimitée) :"
+msgstr ""
+"Taille allouée pour la base de données (en Mo, laisser vide pour illimitée) :"
 
 msgid "1st threshold (in %, leave empty to ignore):"
 msgstr "1er seuil (en %, laisser vide pour ignorer) :"
 
 msgid "2nd threshold (in %, leave empty to ignore):"
 msgstr "2e seuil (en %, laisser vide pour ignorer) :"
+
+msgid "Hosting Monitor Dashboard Module"
+msgstr "Module d'affichage des capacités serveur"
+
+msgid "Display server information on dashboard"
+msgstr "Affiche les capacités serveur sur le tableau de bord"
+
+#~ msgid "of"
+#~ msgstr "de"
