--- a/locales/en/main.po
+++ b/locales/en/main.po
@@ -1,7 +1,3 @@
-# SOME DESCRIPTIVE TITLE.
-# This file is put in the public domain.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: Dotclear 2 dmHostingMonitor module\n"
@@ -58,7 +54,7 @@ msgstr ""
 msgid "Activate module"
 msgstr ""
 
-msgid "Display hosting monitor module in large section (under favorites)"
+msgid "Large screen"
 msgstr ""
 
 msgid "Show hard-disk information"
