--- a/locales/fr/main.po
+++ b/locales/fr/main.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Dotclear 2 dmHostingMonitor module\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-11-05 17:04+0100\n"
+"POT-Creation-Date: 2013-09-19 15:40+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Franck Paul <carnet.franck.paul@gmail.com>\n"
 "Language-Team: \n"
@@ -30,17 +30,26 @@ msgstr "o"
 msgid "Hosting Monitor"
 msgstr "Capacités serveur"
 
+msgid "Hard-disk free"
+msgstr "Place libre sur le disque"
+
 msgid "Hard-disk free:"
 msgstr "Place libre sur le disque :"
 
 msgid "Hard-disk total:"
 msgstr "Taille totale du disque :"
 
+msgid "Hard-disk used"
+msgstr "Place occupée sur le disque"
+
 msgid "Hard-disk used:"
 msgstr "Place occupée sur le disque :"
 
 msgid "Hard-disk limit:"
 msgstr "Place allouée sur le disque :"
+
+msgid "Database size"
+msgstr "Taille de la base de données"
 
 msgid "Database size:"
 msgstr "Taille de la base de données :"
@@ -53,9 +62,6 @@ msgstr "Capacités serveur sur le tableau de bord"
 
 msgid "Activate module"
 msgstr "Activer le module"
-
-msgid "Small screen"
-msgstr "Affichage abrégé"
 
 msgid "Show hard-disk information"
 msgstr "Afficher les informations concernant le disque"
@@ -75,9 +81,11 @@ msgstr "1er seuil (en %, laisser vide pour ignorer) :"
 msgid "2nd threshold (in %, leave empty to ignore):"
 msgstr "2e seuil (en %, laisser vide pour ignorer) :"
 
+msgid "Small screen"
+msgstr "Affichage abrégé"
+
 msgid "Hosting Monitor Dashboard Module"
 msgstr "Module d'affichage des capacités serveur"
 
 msgid "Display server information on dashboard"
 msgstr "Affiche les capacités serveur sur le tableau de bord"
-
