--- a/locales/fr/main.po
+++ b/locales/fr/main.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Dotclear 2 dmHostingMonitor module\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-09-25 08:36+0200\n"
+"POT-Creation-Date: 2013-10-01 16:53+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Franck Paul <carnet.franck.paul@gmail.com>\n"
 "Language-Team: \n"
@@ -98,3 +98,6 @@ msgstr "2e seuil (en %, laisser vide pour ignorer) :"
 
 msgid "Small screen"
 msgstr "Affichage abrégé"
+
+msgid "Show gauges instead of bar graph"
+msgstr "Afficher des jauges à la place des barres"
