--- a/locales/fr/main.po
+++ b/locales/fr/main.po
@@ -1,23 +1,23 @@
 # SOME DESCRIPTIVE TITLE.
 # This file is put in the public domain.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+#
 # Translators:
 # Franck Paul <carnet.franck.paul@gmail.com>, 2023
-# 
+#
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Dotclear 2 dmHostingMonitor module\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-05-02 18:06+0200\n"
+"POT-Creation-Date: 2023-05-13 15:33+0200\n"
 "PO-Revision-Date: 2023-05-02 16:37+0000\n"
 "Last-Translator: Franck Paul <carnet.franck.paul@gmail.com>, 2023\n"
 "Language-Team: French (https://app.transifex.com/open-time/teams/109573/fr/)\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fr\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;\n"
 
 msgid "Display server information on dashboard"
@@ -96,16 +96,13 @@ msgid "Show hard-disk information"
 msgstr "Afficher les informations concernant le disque"
 
 msgid "Allocated hard-disk size (in Mb, leave empty for unlimited):"
-msgstr ""
-"Taille allouée sur le disque dur (en Mo, laisser vide pour illimitée) :"
+msgstr "Taille allouée sur le disque dur (en Mo, laisser vide pour illimitée) :"
 
 msgid "Show database information"
 msgstr "Afficher les informations concernant la base de données"
 
 msgid "Allocated database size (in Mb, leave empty for unlimited):"
-msgstr ""
-"Taille allouée pour la base de données (en Mo, laisser vide pour illimitée) "
-":"
+msgstr "Taille allouée pour la base de données (en Mo, laisser vide pour illimitée) :"
 
 msgid "1st threshold (in %, leave empty to ignore):"
 msgstr "1er seuil (en %, laisser vide pour ignorer) :"
